compiler/tests/en/errors/layout_required.salam
// EXPECT: E005
layout:
    image: alt = "no source" end
end
